--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
+      "target": "ES6",
+      "module": "commonjs",
       "baseUrl": "src",
       "paths": {
-        "@/*": ["*"]
+        "@/*": ["node_modules/*", "src/types/*","*"]
       }
     },
-    "include": ["src"]
+    "include": ["src/**/*"]
   }
   
