--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "emailjs-com": "^3.2.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "framer-motion": "^12.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.6",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-parallax-tilt": "^1.7.294",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.1",
-    "tailwindcss": "^4.1.4"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.4",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
