--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "emailjs-com": "^3.2.0",
     "eslint-plugin-import": "^2.31.0",
