--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "ES6",
-      "module": "commonjs",
-      "baseUrl": "src",
-      "paths": {
-        "@/*": ["node_modules/*", "src/types/*","*"]
-      }
-    },
-    "include": ["src/**/*"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "paths": {
+      "@/*": [
+        "./node_modules/*", 
+        "./src/types/*",
+        "./src/*"
+      ]
+    }
+  },
+  "include": ["src/**/*"]
+}
