--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-pdf": "^9.2.1",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "react-router-hash-link": "^2.4.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
     "typewriter-effect": "^2.22.0"
